# bdor

./: .gitignore  AGENTS.md  README.md  build.sh  celerybeat-schedule  main.py  manage.py  pyproject.toml  requirements-linux.txt  requirements.txt  start.sh  vercel.json
api/: middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0004_applog_requestlog.py  0005_fetchrecord.py  0006_delete_applog_delete_requestlog.py  0007_player_competitions_count.py
api/selectors/: __init__.py  fetch_record.py
api/services/: data_normalization_service.py  external_stats_service.py  player_ranking_service.py
balon_dor/: asgi.py  settings.py  urls.py  wsgi.py
config/: vercel_app.py
core/: api.py  format_data.py  get_cleansheet.py  players.py  points_system.py  queries.md  routes_config.py.example  urls.py  views.py
core/middleware/: rate_limit.py
core/stats/: Bundesliga_summary.csv  ChampionsLeague_summary.csv  EuropaLeague_summary.csv  Ligue1_summary.csv  PremierLeague_summary.csv  SerieA_summary.csv  fetchallstats.py  laliga_summary_overall_allplayers.csv
core/tests/: test_rate_limit.py
data/: europa_stats.csv  league_stats.csv  ucl_stats.csv
docs/: CBV_REFERENCE.md  DEPLOYMENT.md  EXPLICIT_ROUTES.md  MIGRATION_CHECKLIST.md  OPEN_GRAPH_IMAGES.md  QUICK_REFERENCE.md  vulnerability-check-GPT-5-mini.md  vulnerability-check-GPT-5.3-Codex.md  vulnerability-check-Nemotron-3-Super.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  FAQs.tsx  Rankings-old.tsx  Rankings.tsx  (+2 more)
utils/: cache.py  stats.py
(+5 files in other folders)
