[project]
name = "balon-dor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Django
    "django==5.2.8",
    "asgiref==3.11.0",
    "sqlparse==0.5.4",
    # REST API
    "djangorestframework==3.16.1",
    # Database
    "psycopg2-binary==2.9.11",
    # Environment
    "python-dotenv==1.2.1",
    # Static files
    "whitenoise==6.12.0",
    # Server
    "gunicorn==25.1.0",
    # HTTP requests
    "requests==2.32.5",
]